hphp/hack/test/typecheck/is_expression/tconst.php.exp
File "tconst.php", line 7, characters 15-21:
Invalid "is" expression hint (Typing[4195])
File "tconst.php", line 4, characters 14-14:
The "is" operator cannot be used with the abstract type constant T because it is not marked <<__Enforceable>>
File "tconst.php", line 17, characters 15-21:
Invalid "is" expression hint (Typing[4195])
File "tconst.php", line 14, characters 23-23:
The "is" operator cannot be used with the abstract type constant T because it is not marked <<__Enforceable>>
